Some improvements, streamlined